--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,24 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Build outputs
 dist
 dist-ssr
 *.local
+build
+out
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Editor directories and files
 .vscode/*
@@ -23,3 +37,15 @@ dist-ssr
 *.sln
 *.sw?
 .qodo
+
+# Testing
+coverage
+.nyc_output
+
+# Misc
+.cache
+.temp
+.tmp
+*.bak
+*.tmp
+*.temp
